--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   border-radius: 15px;
   border: 3px solid #cfcfcf;
   background-color: #ffffff;
+  margin-bottom:30px;
 }
 .phone img {
   width: 100%;
